test/tests/stages/18_structures/invalid_types/extra_credit/union_type_declarations/duplicate_union_def.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  }
  ;
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  }
  ;
  return
  const int(0)
  ;
  }
